--- a/angular/csvtest.html
+++ b/angular/csvtest.html
@@ -1,37 +1,51 @@
-<h1>CSV Paste Test
+<h1>CSV Paste Test</h1>
 <form class="form-horizontal">
   <div class="control-group">
     <label class="control-label" for="episodePodcastTitle">Podcast
     <div class="controls">
       <input type="text" id="episodePodcastTitle" ng-model="episode.podcast" required>
+    </div>
+  </div>
 
   <div class="control-group">
     <label class="control-label" for="episodeTitle">Title
     <div class="controls">
       <input type="text" id="episodeTitle" ng-model="episode.title" required>
+    </div>
+  </div>
 
   <div class="control-group">
     <label class="control-label" for="episodeNumber">Number
     <div class="controls">
       <input type="number" id="episodeNumber" ng-model="episode.number" required>
+    </div>
+  </div>
 
   <div class="control-group">
     <label class="control-label" for="episodeAirDate">Air Date
     <div class="controls">
       <input type="text" id="episodeAirDate" ng-model="episode.airDate" required>
+    </div>
+  </div>
 
   <div class="control-group">
     <label class="control-label" for="episodeSearchSlug">Search Slug
     <div class="controls">
       <input type="text" id="episodeSearchSlug" ng-model="episode.searchSlug">
+    </div>
+  </div>
 
   <div class="control-group">
     <label class="control-label" for="mediaSource">Media URL
     <div class="controls">
       <input type="text" id="mediaSource" ng-model="mediaSource">
+    </div>
+  </div>
+</form>
 
 <textarea ng-model="csvData">
 
 <!-- <div>{{episodeJson()}} -->
 <div ng-repeat="node in episode.nodes">
-  {{node.time}} <img ng-src="/static/img/{{node.nodeType.icon}}.png"> <a href="{{node.url}}">{{node.title}}
+  {{node.time}} <img ng-src="/static/img/{{node.nodeType.icon}}.png"> <a href="{{node.url}}">{{node.title}}</a>
+</div>
