--- a/angular/player.html
+++ b/angular/player.html
@@ -1,38 +1,58 @@
 <div podly-vimeo id="contentContainerLeft">
   <div id="nowPlayingTitle">
     {{episode.podcast}} &#35;{{episode.number}}
+  </div>
   <div id="nowPlayingSubTitle">
       {{episode.title}}
+  </div>
 
   <div ng-include="'/partials/player.html'" onload="loadMedia()">
+  </div>
+</div>
 
 <!--Episode Nav Bar-->
 <div id="episodeNavBar">
   <form class="navbar-search" ng-submit="doSearch()">
     <input type="text" class="search-query" placeholder="Search any episode" ng-model="episodeSearchValue">
+  </form>
   <ul class="navFloater">
-    <li>{{signupMessage}}
+    <li>{{signupMessage}}</li>
     <li ng-hide="signupBoxHidden">
       <form ng-submit="subscribeUser()">
         <div class="input-prepend input-append">
-          <span class="add-on input-mini ng-binding" type="text" disabled=""><i class="icon-envelope"></i>
+          <span class="add-on input-mini ng-binding" type="text" disabled=""><i class="icon-envelope"></i></span>
           <input style="width:162px" class="span2 ng-pristine ng-valid" type="text" placeholder="Enter your email" ng-model="signupEmail" ng-disabled="signupBoxDisabled">
           <a class="btn" ng-click="subscribeUser($event)"><i class="icon-plus"></i></a>
+        </div>
+      </form>
+    </li>
+  </ul>
+</div>
 
 <div class="episodeList">
   <div id="search-results-div" ng-show="displaySearchResults">
-    <h5>Search Results <a ng-click="displaySearchResults = false"><span class="label label-info"><i class="icon-remove icon-white">&nbsp;</i>close</span></a>
+    <h5>Search Results <a ng-click="displaySearchResults = false"><span class="label label-info"><i class="icon-remove icon-white">&nbsp;</i>close</span></a></h5>
     <ul class="nav nav-tabs nav-stacked red">
       <li ng-repeat="x in searchResults">
         <a ng-click="loadSearchResult(x)" title="{{x.title}}" ng-class="{episodeSummaryLink: x.number, nodeSummaryLink: x.relId}"><div class="icon" ng-show="x.nodeType" style="float:left;"><img ng-src="/static/img/{{x.nodeType.icon}}"></div><div class="titleOverflow"><span ng-show="x.number" style="font-weight:bold;display:inline-block;margin-right:9px">{{x.number}} </span><span style="font-weight:bold" ng-show="x.nodeType">{{x.nodeType.title}}<br></span ng-class="{episodeResultTitle: x.number, nodeResultTitle: x.relId}"><span>{{x.title}}</span></div></a>
+      </li>
+    </ul>
+  </div>
   <div id="episodes-div" ng-hide="displaySearchResults">
-    <h5>Episodes
+    <h5>Episodes</h5>
     <ul class="nav nav-tabs nav-stacked red">
       <li ng-repeat="ep in episodePages.episodes" ng-class="{active: ep.number == episode.number}">
         <a class="titleOverflow" href="/podcasts/{{episode.podcast}}/episodes/{{ep.number}}" title="{{ep.title}}"><span style="font-weight:bold;display:inline-block;margin-right:9px">{{ep.number}} </span>{{ep.title}}</a>
+      </li>
+    </ul>
     <div ng-hide="episodePages.max < 2" style="text-align:center;">
       <a ng-click="loadEpisodePage(episodePages.current - 1)" class="btn btn-mini" style="font-size:13px;">
         <i class="icon-arrow-left">&nbsp;</i>
+      </a>
       <span style="font-size:18px;vertical-align:middle;">{{episodePages.current}}/{{episodePages.max}}</span>
       <a ng-click="loadEpisodePage(episodePages.current + 1)" class="btn btn-mini" style="font-size:13px;">
         <i class="icon-arrow-right">&nbsp;</i>
+      </a>
+    </div>
+  </div>
+</div>
