--- a/angular/episodeList.html
+++ b/angular/episodeList.html
@@ -2,4 +2,6 @@
   found {{episodes.length}} episodes
   <ul>
     <li ng-repeat="episode in episodes | orderBy:'number'">
-      <a href="#/episodes/{{episode.number}}">{{episode.number}} - {{episode.title}}
+      <a href="#/episodes/{{episode.number}}">{{episode.number}} - {{episode.title}}</a>
+    </li>
+  </ul>
