--- a/angular/podcastIndex.html
+++ b/angular/podcastIndex.html
@@ -1,4 +1,6 @@
 <h1>Podcasts</h1>
 <ul podcast-list>
   <li ng-repeat="podcast in podcasts | orderBy:'name'">
-    <a href="/admin/podcasts/{{podcast.name}}">{{podcast.name}}
+    <a href="/admin/podcasts/{{podcast.name}}">{{podcast.name}}</a>
+  </li>
+</ul>
