Add froogaloop for Vimeo to bower. Rename app to 'podlyApp'

--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Podly</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="yoApp">
+  <body ng-app="podlyApp">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -25,7 +25,7 @@
         <div class="container">
           <div class="navbar-header">
 
-            <a class="navbar-brand" href="#/">yo</a>
+            <a class="navbar-brand" href="#/">Podly</a>
           </div>
 
           <div class="collapse">
@@ -71,6 +71,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/froogaloop/froogaloop.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
