Some dummy data

--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-heart"></span> from the Nerd Tribe</p>
       </div>
     </div>
 
