connected firebase, yo :D

--- a/episode-editor/app/index.html
+++ b/episode-editor/app/index.html
@@ -38,6 +38,8 @@
         <h3 class="text-muted">Podly Episode Editor</h3>
       </div>
 
+      <h1> This is a heading (we can delete it whenever)</h1>
+
       <div class="row marketing tab-content">
         <div role="tabpanel" class="tab-pane active" id="edit">
           Edit
