Auto Play settings
Turned off auto-play settings for HYR # 21 in prep for episode 22
taking the auto play setting

--- a/resplendent-inferno-6819/prototype/HYRP_22.html
+++ b/resplendent-inferno-6819/prototype/HYRP_22.html
@@ -73,7 +73,7 @@
                     <!-- Audio Control -->
                         <audio controls autoplay type='audio/mpg' name="media" id='audioPlayer' width="480" onload="document.getElementById('audioPlayer').play(); document.getElementById('audioPlayer').currentTime=0">
                             
-                          <source src="http://traffic.libsyn.com/preview/healyourselfradio/Troy_Dodson_Final_Cut-_8415_1.17_PM.mp3" type="audio/mpeg" preload = 'auto' autoplay='1' autostart='1'>
+                          <source src="http://traffic.libsyn.com/healyourselfradio/biohacking_and_the_quantified_self.mp3" type="audio/mpeg" preload = 'auto' autoplay='1' autostart='1'>
                         </audio>
                          </br>
                     
