--- a/resplendent-inferno-6819/prototype/HYRP_21.html
+++ b/resplendent-inferno-6819/prototype/HYRP_21.html
@@ -71,7 +71,7 @@
 
                     
                     <!-- Audio Control -->
-                        <audio controls autoplay type='audio/mpg' name="media" id='audioPlayer' width="480" onload="document.getElementById('audioPlayer').play(); document.getElementById('audioPlayer').currentTime=0">
+                        <audio controls type='audio/mpg' name="media" id='audioPlayer' width="480" onload="document.getElementById('audioPlayer').play(); document.getElementById('audioPlayer').currentTime=0">
                             
                           <source src="http://traffic.libsyn.com/preview/healyourselfradio/Troy_Dodson_Final_Cut-_8415_1.17_PM.mp3" type="audio/mpeg" preload = 'auto' autoplay='1' autostart='1'>
                         </audio>
