--- a/episode-editor/app/index.html
+++ b/episode-editor/app/index.html
@@ -208,7 +208,7 @@
 
 
     <!-- build:js scripts/main_podcastUrl.js (handles read/write of podcast URL) -->
-    <script src="scripts/main_podcastUrl.js"></script>
+    <script src="scripts/main_showNotes.js"></script>
     <!-- endbuild -->  
 
     <!-- build:js scripts/addSection.js (this adds a section to the podcast DB for "title") 
