--- a/resplendent-inferno-6819/prototype/HYRP_22.html
+++ b/resplendent-inferno-6819/prototype/HYRP_22.html
@@ -61,7 +61,7 @@
                       )
                     </h4>
                     <h5>
-                      Episode 21 - Does Your Brain Even Lift? Brain based fitness with Troy Dodson
+                      Episode 22 - How to Start Biohacking - A Beginner's Guide to Self-Measurement
                     </h5>
                     
                   <div class='container container-fluid'>
