--- a/resplendent-inferno-6819/prototype/HYRP_22.html
+++ b/resplendent-inferno-6819/prototype/HYRP_22.html
@@ -169,7 +169,7 @@
 
                           <!-- Sleep Cycle - sleepcycle.com -  application that measures sleep quality and finds your ideal waking time - 11:16-->
                             <p>
-                              <button type="button" class="btn btn-default btn" onclick="document.getElementById('audioPlayer').play(); document.getElementById('audioPlayer').currentTime=(11*60+22)"><span class="glyphicon glyphicon-play" aria-hidden="true"></span>&nbsp; 11:22 | Sleep Cycle -  application that measures sleep quality and finds your ideal waking time - 11:16</button> 
+                              <button type="button" class="btn btn-default btn" onclick="document.getElementById('audioPlayer').play(); document.getElementById('audioPlayer').currentTime=(11*60+22)"><span class="glyphicon glyphicon-play" aria-hidden="true"></span>&nbsp; 11:22 | Sleep Cycle -  application that measures sleep quality and finds your ideal waking time</button> 
                               <a href = "http://sleepcycle.com" target="_blank">
                                   
                                   <button type='button' class="btn btn-primary">
@@ -182,7 +182,7 @@
                             <!-- Happiness App - http://goodtohear.co.uk/happiness - track your mood and mental health. See what factors are affecting your positively and negatively. - 14:35 -->
                             <p>
                               <button type="button" class="btn btn-default btn" onclick="document.getElementById('audioPlayer').play(); document.getElementById('audioPlayer').currentTime=(14*60+33)"><span class="glyphicon glyphicon-play" aria-hidden="true"></span>&nbsp; 14:33 | Happiness App - track your mood and mental health. See what factors are affecting your positively and negatively. </button> 
-                              <a href = " http://goodtohear.co.uk/happiness" target="_blank">
+                              <a href = "http://goodtohear.co.uk/happiness" target="_blank">
                                   
                                   <button type='button' class="btn btn-primary">
                                     Link
