--- a/episode-editor/app/index.html
+++ b/episode-editor/app/index.html
@@ -241,6 +241,7 @@
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
     <!-- endbuild -->
 
+    <script src = "scripts/deleteEpisodeNote.js"></script>
 
     <!-- build:js scripts/main_showNotesTable.js  -->
     <script src="scripts/main_showNotesTable.js"></script>
@@ -261,9 +262,8 @@
     <!-- endbuild -->  
 
 
-
-
     <script src = "scripts/main_showNotesPlayButton.js"></script>
+
 
 
 
