Break out lib/event.js and lib/controller.js

--- a/episode-editor/app/index.html
+++ b/episode-editor/app/index.html
@@ -261,6 +261,18 @@
     <script src="scripts/generated/config.js"></script>
     <!-- endbuild -->
 
+    <!-- TODO - some sort of dependency based loading -->
+    <script type='text/javascript'>
+      podly = {};
+    </script>
+    <!-- build:js scripts/lib/event.js -->
+    <script src="scripts/lib/event.js"></script>
+    <!-- endbuild -->
+
+    <!-- build:js scripts/lib/controller.js -->
+    <script src="scripts/lib/controller.js"></script>
+    <!-- endbuild -->
+
     <!-- build:js scripts/controllers/auth.js -->
     <script src="scripts/controllers/auth.js"></script>
     <!-- endbuild -->
